# toinen-ohtu-repositorio

./: PULL.md  README.md  referaatti.md  retro.md
viikko1/nhl-statistics-1/src/: statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko1/riippuvuuksien-injektointi-1/: .pylintrc
viikko1/riippuvuuksien-injektointi-1/src/: index.py  varasto.py
viikko1/riippuvuuksien-injektointi-1/src/tests/: varasto_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  kirjanpito.py  pankki.py  viitegeneraattori.py
viikko3/login-robot/src/: AppLibrary.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/: pyproject.toml
viikko3/nhl-reader/src/: main.py  player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/int-joukko/src/: int_joukko.py
viikko4/int-joukko/src/tests/: int_joukko_test.py
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: .coverage
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  querybuilder.py
viikko7/kivi-paperi-sakset/src/: ihmispelaaja.py  index.py  kps.py  tekoaly.py  tekoaly_parannettu.py
(+1 files in other folders)
